--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wining team </title>
+    <title>Functions</title>
 </head>
 <body>
-    <h1>Wining team</h1>
-    
+    <h1>Functions</h1>
+
     
 </body>
 <script src="./scripts.js">
