--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Functions</title>
+    <title>Functions Expresions</title>
 </head>
 <body>
-    <h1>Functions</h1>
+    <h1>Functions Expresions</h1>
 
     
 </body>
